--- a/package.json
+++ b/package.json
@@ -36,5 +36,8 @@
   "engines": {
     "node": ">=12.0"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "zod": "^3.22.4"
+  }
 }
