--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@babel/node": "^7.10.1",
     "@babel/preset-env": "^7.10.2",
     "@babel/preset-typescript": "^7.10.1",
+    "@types/js-yaml": "^4.0.9",
     "@types/serverless": "^3.12.22",
     "@typescript-eslint/eslint-plugin": "^3.10.1",
     "@typescript-eslint/parser": "^3.10.1",
@@ -28,6 +29,7 @@
     "husky": "^8.0.3",
     "jest": "^29.7.0",
     "prettier": "^2.2.1",
+    "serverless-step-functions": "^3.21.0",
     "typescript": "^3.9.10"
   },
   "peerDependencies": {
